--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "npx prettier . --check",
-    "format:fix": "npx prettier . --write"
+    "format:fix": "npx prettier . --write",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "ShypkoStanislav",
@@ -24,6 +25,7 @@
   "description": "",
   "devDependencies": {
     "eslint": "^8.56.0",
+    "husky": "^8.0.3",
     "prettier": "3.1.1"
   }
 }
